# gtk-tac-toe

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac  main.glade
builder/: main.ui  sct.gresource.xml
debian/: changelog  control  copyright
include/: game.h
src/: application.c  game.c  resources.c  window.c
